# ultimate_debate

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  test_openai_auth.py  test_openai_auth_manual.py
.claude/agents/: analyst.md  architect-low.md  architect-medium.md  architect.md  build-fixer-low.md  build-fixer.md  claude-expert.md  code-reviewer-low.md  code-reviewer.md  critic.md  designer-high.md  designer-low.md  executor-high.md  executor-low.md  executor.md  explore-high.md  frontend-dev.md  planner.md  qa-tester-high.md  qa-tester.md  researcher-low.md  scientist-high.md  scientist-low.md  security-reviewer-low.md  security-reviewer.md  tdd-guide-low.md
.claude/commands/: audit.md  auth.md  auto.md  check.md  chunk.md  create.md  debug.md  issue.md  parallel.md  pr.md  research.md  session.md  tdd.md  verify.md  work-wsoptv.md  work.md  worktree.md
.claude/debates/: gemini-auth-design-prompt.txt  gemini-auth-design-result.json
.claude/skills/: SKILL_TEMPLATE.md  checklist.md
.claude/skills/tdd/: SKILL.md
.omc/: ralplan-state.json  ultrawork-state.json
.omc/plans/: auth-system-fix.md  llm-workflow-integration.md
docs/: .bkit-memory.json  .pdca-status.json
docs/.pdca-snapshots/: snapshot-1771190214790.json  snapshot-1771193381502.json  snapshot-1771331356283.json  snapshot-1771333580150.json  snapshot-1771344584932.json  snapshot-1771349357127.json  snapshot-1771350263650.json  snapshot-1771350965489.json
tests/: __init__.py  conftest.py  test_claude_client.py  test_engine.py  test_model_discovery.py  test_real_api_call.py  test_workflow_e2e.py
(+453 files in other folders)
