[project]
name = "ultimate-debate"
version = "1.0.0"
description = "Multi-AI Consensus Debate Engine"
requires-python = ">=3.12"
dependencies = [
    "scikit-learn>=1.4.0",  # TF-IDF for semantic comparison
    "httpx>=0.25.0",        # HTTP client for API calls
    "rich>=13.0",           # CLI output formatting
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.2.0",
]
secure = [
    "keyring>=24.0",        # OS credential storage
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ultimate_debate"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
strict = true
python_version = "3.12"
